external-crates/move/crates/move-compiler/tests/move_check/verification/cross_module_valid.exp
error[E00002]: DEPRECATED. unexpected spec item
  ┌─ tests/move_check/verification/cross_module_valid.move:5:7
  │
5 │     #[verify_only]
  │       ^^^^^^^^^^^ Specification blocks are deprecated

error[E00002]: DEPRECATED. unexpected spec item
  ┌─ tests/move_check/verification/cross_module_valid.move:8:7
  │
8 │     #[verify_only]
  │       ^^^^^^^^^^^ Specification blocks are deprecated

error[E00002]: DEPRECATED. unexpected spec item
   ┌─ tests/move_check/verification/cross_module_valid.move:13:7
   │
13 │     #[verify_only]
   │       ^^^^^^^^^^^ Specification blocks are deprecated

error[E00002]: DEPRECATED. unexpected spec item
   ┌─ tests/move_check/verification/cross_module_valid.move:16:7
   │
16 │     #[verify_only]
   │       ^^^^^^^^^^^ Specification blocks are deprecated

error[E00002]: DEPRECATED. unexpected spec item
   ┌─ tests/move_check/verification/cross_module_valid.move:19:7
   │
19 │     #[verify_only]
   │       ^^^^^^^^^^^ Specification blocks are deprecated

